product_module changes